log
ju.,  5 de may. de 2022 12:25:55: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
db2dbeb
ju.,  5 de may. de 2022 12:36:19: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:15: error: unused variable 'aux' [-Werror=unused-variable]
    heapElem * aux = pq->heapArray;
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
1438112
ju.,  5 de may. de 2022 12:36:31: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
3a44559
ju.,  5 de may. de 2022 12:37:48: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
eae5eb6
ju.,  5 de may. de 2022 12:40:05: 
 tests:  2|2
total_score: 20/70
464421d
ju.,  5 de may. de 2022 13:04:54: 
 heap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:35:36: error: comparison between pointer and integer [-Werror]
       if(pq->heapArray[i].priority == NULL){
                                    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
40b9a73
ju.,  5 de may. de 2022 13:08:41: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
9fb544a
ju.,  5 de may. de 2022 13:10:33: 
 heap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
450625d
ju.,  5 de may. de 2022 13:11:44: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|2
total_score: 35/70
1cee960
ju.,  5 de may. de 2022 13:13:29: 
 heap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  7|1
total_score: 45/70
239aac5
ju.,  5 de may. de 2022 20:42:54: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
86724e5
ju.,  5 de may. de 2022 20:43:44: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
78ca7bb
ju.,  5 de may. de 2022 20:44:59: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2eed7aa
ju.,  5 de may. de 2022 21:04:45: 
 heap.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
5935e5e
